# mipt-networks-architecture

./: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  Data.txt  README.md  main.cpp  rtp_parse.cpp  rtp_parse.h
front/: index.html  index.js
libdatachannel/: CMakeLists.txt
